# tuxlablab

./: .gitignore  README.md  fejl  install.sh  pyproject.toml  requirements.txt
config/: tuxlablab.conf.example
distributions/: centos9.dist.template  distro.dist.template
tuxlablab/: __init__.py  api.py  cli.py  config.py  core.py  db.py  distribution_presets.py  rh_download.py
tuxlablab/web/: __init__.py
tuxlablab/web/static/: style.css
tuxlablab/web/templates/: base.html  create_vm.html  create_vm_progress.html  device_auth.html  distributions.html  index.html  playbook_progress.html  settings.html  vm_detail.html
