[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "tuxlablab"
version = "1.0.0"
description = "Python-based VM administration – a full-featured port of laptop-lab"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "libvirt-python>=10.0.0",
]

[project.scripts]
tuxlablab = "tuxlablab.cli:main"
tuxlablab-server = "tuxlablab.api:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["tuxlablab*"]
